<resources>
    <string name="app_name">Movie Buff</string>
    <string name="internet_error">Please check your internet connection and try again</string>
    <string name="top_rated">Top Rated Movies</string>
    <string name="top_rated_option">Top Rated</string>
    <string name="popular_option">Popular</string>
    <string name="popular">Popular Movies</string>
    <string name="icon_title">Options</string>
    <string name="sort_by">Sort by</string>
    <string name="movie_detail">Movie Details</string>
    <string name="user_rating">USER RATING:</string>
    <string name="release_date">RELEASE DATE:</string>
    <string name="reviews">TOP USER REVIEW</string>
    <string name="review_placeholder">Disney\'s done a great job with Gaston and The Beast, the
        two aspects that I always thought would be the most important, and the most difficult, to nail.\r\n\r\nFinal rating:★★★ - I personally recommend you give it a go.</string>
    <string name="favorites">My Favorites</string>
    <string name="favorites_error">You do not currently have any movies saved</string>
    <string name="read_more">Read More</string>
    <string name="show_less">Show less</string>
</resources>
