<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/down_arrow"
        android:checkable="true"
        android:icon="@drawable/ic_keyboard_arrow_down_white_24dp"
        android:title="@string/icon_title"
        app:showAsAction="always"
        >

        <menu>
            <item android:title="@string/sort_by"/>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/popular"
                    android:title="@string/popular_option"
                    android:checked="true"/>
                <item
                    android:id="@+id/top_rated"
                    android:title="@string/top_rated_option"/>
                <item
                    android:id="@+id/favorites"
                    android:title="@string/favorites"/>
            </group>
        </menu>
    </item>

    <item android:id="@+id/action_refresh"
          app:showAsAction="never"
          android:title="Refresh"/>

</menu>