<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.oluwatimilehin.moviebuff.DetailActivity"
    tools:ignore="MissingPrefix">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/thumbnail_image"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_margin="25dp"
                    />

                <ImageView
                    android:id="@+id/star"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_toRightOf="@id/thumbnail_image"
                    android:layout_toEndOf="@id/thumbnail_image"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="25dp"
                    android:visibility="invisible"
                    android:layout_marginStart="25dp"
                    android:src="@drawable/ic_star_border_white_48dp"/>

                <ProgressBar
                    android:id="@+id/loading_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:id="@+id/error_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/internet_error"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/user_rating_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:layout_toEndOf="@id/thumbnail_image"
                    android:layout_toRightOf="@id/thumbnail_image"
                    android:text="@string/user_rating"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:visibility="invisible"
                    />

                <TextView
                    android:id="@+id/rating_tv"
                    fontPath="fonts/Raleway-Medium.ttf"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_rating_text"
                    android:layout_toEndOf="@id/thumbnail_image"
                    android:layout_toRightOf="@id/thumbnail_image"
                    android:gravity="center"
                    android:textColor="@color/textColor"
                    android:textSize="40sp"/>

                <TextView
                    android:id="@+id/release_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rating_tv"
                    android:layout_marginTop="23dp"
                    android:layout_toEndOf="@id/thumbnail_image"
                    android:layout_toRightOf="@id/thumbnail_image"
                    android:text="@string/release_date"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/release_date_text"
                    android:layout_toEndOf="@id/thumbnail_image"
                    android:layout_toRightOf="@id/thumbnail_image"
                    android:padding="10dp"
                    android:textColor="@color/textColor"
                    android:textSize="25sp"/>

            </RelativeLayout>


            <TextView
                android:id="@+id/title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="The God's must be crazy"/>


            <TextView
                android:id="@+id/plot_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5dp"
                android:padding="20dp"
                android:textColor="@color/textColor"
                android:textSize="18sp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
